--- a/AvanzarCarasJuego.ipynb
+++ b/AvanzarCarasJuego.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOE/Kj6NTML+jbQ5W2aKF4M",
+      "authorship_tag": "ABX9TyOU0iCsnJwGs3Uz040KoKQc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -285,9 +285,9 @@
         "\n",
         "Este número $N$ está dado por\n",
         "\n",
-        "  \\begin{align}\n",
+        "  \\begin{align*}\n",
         "  N > \\left( \\frac{2 \\sigma Z_{\\alpha/2}}{\\epsilon} \\right)^2\n",
-        "  \\end{align}\n",
+        "  \\end{align*}\n",
         "\n",
         "Implementamos el siguiente código:"
       ],
@@ -434,9 +434,9 @@
         "## **7. Hallamos el intervalo de confianza.**\n",
         "\n",
         "Utilizamos la fórmula\n",
-        "  \\begin{align}\n",
+        "  \\begin{align*}\n",
         "  \\bar{x} - Z_{\\frac{\\alpha}{2}}\\frac{s}{\\sqrt{n}} < \\mu < \\bar{x} + Z_{\\frac{\\alpha}{2}}\\frac{s}{\\sqrt{n}}\n",
-        "  \\end{align}\n",
+        "  \\end{align*}\n",
         "\n",
         "Implementamos el siguiente código:"
       ],
@@ -484,24 +484,24 @@
         "\n",
         "Definimos cada estado $\\,i\\,$ utilizando el mapeo numérico que utilizamos para cada color a lo largo de la resolución del problema y obtenemos\n",
         "  \n",
-        "  \\begin{align}\n",
+        "  \\begin{align*}\n",
         "  P = \\begin{bmatrix}\n",
         "      \\frac{1}{4} & \\frac{1}{2} & \\frac{1}{4} & 0 \\\\\n",
         "      0 & \\frac{1}{4} & \\frac{1}{2} & \\frac{1}{4} \\\\\n",
         "      \\frac{1}{4} & 0 & \\frac{1}{4} & \\frac{1}{2} \\\\\n",
         "      \\frac{1}{2} & \\frac{1}{4} & 0 & \\frac{1}{4}\n",
         "      \\end{bmatrix}\n",
-        "  \\end{align}\n",
+        "  \\end{align*}\n",
         "\n",
         "Ahora construimos el sistema de ecuaciones que nos permitirá calcular las probabilidades estacionarias o límite $\\,\\pi_i\\,$ de nuestra matriz de transición $\\,P\\,$.\n",
         "\n",
-        "  \\begin{align}\n",
+        "  \\begin{align*}\n",
         "  \\pi_1 &= \\frac{\\pi_1}{4} + \\frac{\\pi_3}{4} + \\frac{\\pi_4}{2} \\\\\n",
         "  \\pi_2 &= \\frac{\\pi_1}{2} + \\frac{\\pi_2}{4} + \\frac{\\pi_4}{4} \\\\\n",
         "  \\pi_3 &= \\frac{\\pi_1}{4} + \\frac{\\pi_2}{2} + \\frac{\\pi_3}{4} \\\\\n",
         "  \\pi_4 &= \\frac{\\pi_2}{4} + \\frac{\\pi_3}{2} + \\frac{\\pi_4}{4} \\\\\n",
         "  \\pi_1 &+ \\pi_2 + \\pi_3 + \\pi_4 = 1\n",
-        "  \\end{align}\n",
+        "  \\end{align*}\n",
         "\n",
         "Resolvemos el sistema mediante Gauss-Jordan y obtenemos $$\\pi_i = \\frac{1}{4}$$\n",
         "\n",
