--- a/SerpientesEscaleras.ipynb
+++ b/SerpientesEscaleras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfvEMdrHLw16KwMAti+nlv",
+      "authorship_tag": "ABX9TyOtwOEnznbwVQDwx1K9cyHC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -417,9 +417,9 @@
         "\n",
         "Este número $N$ está dado por\n",
         "\n",
-        "  \\begin{align}\n",
+        "  \\begin{align*}\n",
         "  N > \\left( \\frac{2 \\sigma Z_{\\alpha/2}}{\\epsilon} \\right)^2\n",
-        "  \\end{align}\n",
+        "  \\end{align*}\n",
         "\n",
         "Implementamos el siguiente código:"
       ],
@@ -548,9 +548,9 @@
         "## **7. Hallamos el intervalo de confianza.**\n",
         "\n",
         "Utilizamos la fórmula\n",
-        "  \\begin{align}\n",
+        "  \\begin{align*}\n",
         "  \\bar{x} - Z_{\\frac{\\alpha}{2}}\\frac{s}{\\sqrt{n}} < \\mu < \\bar{x} + Z_{\\frac{\\alpha}{2}}\\frac{s}{\\sqrt{n}}\n",
-        "  \\end{align}\n",
+        "  \\end{align*}\n",
         "\n",
         "Implementamos el siguiente código:"
       ],
@@ -727,7 +727,7 @@
         "\\end{pmatrix}\n",
         "\\end{equation*}$\\hspace{5cm}$\n",
         "\n",
-        "\\begin{equation*} 0_{r\\times t} =\n",
+        "\\begin{equation*} \\mathbf{0}_{r\\times t} =\n",
         "\\begin{pmatrix}\n",
         "0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\n",
         "\\end{pmatrix}\n",
