--- a/Problema30_piezas.ipynb
+++ b/Problema30_piezas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNabjif8AmIyQpAgWk2/28Z",
+      "authorship_tag": "ABX9TyNG6XdBOi9AcfVzRCSEfCzF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,10 +50,10 @@
         "\n",
         "Habiendo deducido la distribución de cada variable aleatoria, se sigue que\n",
         "\n",
-        "  \\begin{align}\n",
+        "  \\begin{align*}\n",
         "  t_1 &\\sim \\mathrm{Exp}(0.5) \\\\\n",
         "  t_2 &\\sim \\mathrm{Exp}(1)\n",
-        "  \\end{align}\n",
+        "  \\end{align*}\n",
         "\n",
         "## **4. Defina el modelo del sistema y los objetivos de la simulación.**\n",
         "\n",
@@ -252,9 +252,9 @@
         "\n",
         "Este número $N$ está dado por\n",
         "\n",
-        "  \\begin{align}\n",
+        "  \\begin{align*}\n",
         "  N > \\left( \\frac{2 \\sigma Z_{\\alpha/2}}{\\epsilon} \\right)^2\n",
-        "  \\end{align}\n",
+        "  \\end{align*}\n",
         "\n",
         "Implementamos el siguiente código:"
       ],
@@ -384,9 +384,9 @@
         "## **7. Hallamos el intervalo de confianza.**\n",
         "\n",
         "Utilizamos la fórmula\n",
-        "  \\begin{align}\n",
+        "  \\begin{align*}\n",
         "  \\bar{x} - Z_{\\frac{\\alpha}{2}}\\frac{s}{\\sqrt{n}} < \\mu < \\bar{x} + Z_{\\frac{\\alpha}{2}}\\frac{s}{\\sqrt{n}}\n",
-        "  \\end{align}\n",
+        "  \\end{align*}\n",
         "\n",
         "Implementamos el siguiente código:"
       ],
